--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,7 @@
 }
 @layer utilities {
   .title-hero {
-    @apply text-7xl font-medium leading-[5.4rem] tracking-tighter;
+    @apply text-8xl font-semibold leading-[6rem] tracking-normal;
   }
   .desc-hero {
     @apply text-xl font-light;
